--- a/src/www/styles/globals.css
+++ b/src/www/styles/globals.css
@@ -25,6 +25,9 @@
     --accent: 220 14.3% 95.9%;
     --accent-foreground: 220.9 39.3% 11%;
 
+    --success: 142.1 70.6% 45.3%;
+    --success-foreground: 210 40% 98%;
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 20% 98%;
 
@@ -56,6 +59,9 @@
 
     --accent: 215 27.9% 16.9%;
     --accent-foreground: 210 20% 98%;
+
+    --success: 143.8 61.2% 20.2%;
+    --success-foreground: 138.5 76.5% 96.7%;
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 20% 98%;
